--- a/app/assets/stylesheets/video_row.scss
+++ b/app/assets/stylesheets/video_row.scss
@@ -1,6 +1,8 @@
 .videoRow {
-  margin: 1px;
+  padding: 1px;
   width: 100%;
   display: flex;
   justify-content: flex-start;
+  min-height: 0;
+  min-width: 0;
 }
